--- a/main.css
+++ b/main.css
@@ -47,11 +47,10 @@ body {
 .wrapper .init-box .start-btn {
   position: absolute;
   right: 0;
-  bottom: 30px;
   left: 0;
 
-  width: 149px;
-  height: 208px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 
   cursor: pointer;
